# Bu3AICode

./: README.md  pyproject.toml
config/: config.example.yaml
plugins/: collect_todos.py  notify_on_patch.py
src/promptagent/: __init__.py  cli.py  config.py  logging_setup.py
src/promptagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/promptagent/agent/: agent_engine.py
src/promptagent/ai_backend/: gemini_client.py
src/promptagent/analyzer/: project_analyzer.py
src/promptagent/autonomous/: autonomous_runner.py
src/promptagent/context/: cache.py  context_builder.py
src/promptagent/git/: git_manager.py
src/promptagent/hooks/: hook_manager.py
src/promptagent/human_loop/: loop.py
src/promptagent/lint/: lint_runner.py
src/promptagent/lsp/: language_service.py
src/promptagent/memory/: memory_store.py
src/promptagent/parser/: response_parser.py
src/promptagent/patch/: patch_engine.py  three_way_merge.py
src/promptagent/plugins/: plugin_manager.py
src/promptagent/prompt/: json_schema.py  prompt_engine.py
src/promptagent/terminal/: executor.py
src/promptagent/testing/: test_runner.py
src/promptagent/ui/: command_palette.py  components.py  splash.py  (+1 more)
tests/: test_agent_conflict.py  test_agent_engine_json.py  test_autonomous_runner.py  test_cli_auto_command.py  test_cli_json_flow.py  test_fuzzy.py  test_gemini_client.py  test_json_schema.py  test_lsp.py  test_patch_engine.py  test_project_analyzer.py  test_prompt_engine.py  test_response_parser.py  test_textual_app.py  test_three_way_merge.py
(+1 files in other folders)
