[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptagent"
version = "0.1.0"
description = "Claude Codeのような開発体験を、Human Loop(コピー&ペースト)を基本としつつGoogle AI Studioとの連携もオプトインで選べるCLI開発支援ツール"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "PromptAgent Contributors" }]
keywords = ["cli", "developer-tools", "ai-assisted-development", "productivity"]

dependencies = [
    "rich>=13.7.0",
    "textual>=0.58.0",
    "prompt_toolkit>=3.0.43",
    "pyperclip>=1.8.2",
    "PyYAML>=6.0.1",
    "GitPython>=3.1.42",
    "typer>=0.12.3",
    "watchfiles>=0.21.0",
    "jedi>=0.19.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "black>=24.3.0",
]

[project.scripts]
promptagent = "promptagent.cli:main"
pa = "promptagent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
